--- a/components/header-en.html
+++ b/components/header-en.html
@@ -9,22 +9,7 @@
             </div>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item-dropdown">
-                        <a class="nav-link-with-dropdown" href="#services">
-                            <span>PMU Services</span>
-                            <img alt="Dropdown" class="nav-dropdown-arrow" src="../icons/arrow-down.svg"
-                                data-icon-path="arrow-down.svg" />
-                        </a>
-                        <ul class="nav-dropdown-menu">
-                            <li><a href="/en/services/phun-moi-collagen.html">Collagen Lip Blushing</a></li>
-                            <li><a href="/en/services/phun-may-shading.html">Shading Ombre Brows</a></li>
-                            <li><a data-open-zalo-modal="" href="/en/services/eyeliner-tattoo.html">Lashline
-                                    Enhancement</a>
-                            </li>
-                            <li><a href="/en/services/khu-tham-moi-nam-nu.html">Lip Neutralizing for Men &amp; Women</a>
-                            </li>
-                        </ul>
-                    </li>
+                    <li><a href="/en/pricing.html">Pricing</a></li>
                     <li><a href="/en/blogs.html">Beauty Knowledge</a></li>
                     <li><a href="/en/gallery.html">Gallery</a></li>
                     <li><a href="/en/feedback.html">Client Feedback</a></li>
