--- a/components/header-ko.html
+++ b/components/header-ko.html
@@ -9,19 +9,7 @@
             </div>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item-dropdown">
-                        <a href="#services" class="nav-link-with-dropdown">
-                            <span>PMU 서비스</span>
-                            <img src="../icons/arrow-down.svg" alt="Dropdown" class="nav-dropdown-arrow"
-                                data-icon-path="arrow-down.svg">
-                        </a>
-                        <ul class="nav-dropdown-menu">
-                            <li><a href="/ko/services/phun-moi-collagen.html">콜라겐 립 블러싱</a></li>
-                            <li><a href="/ko/services/phun-may-shading.html">쉐이딩 옴브레 브로우</a></li>
-                            <li><a href="/ko/services/eyeliner-tattoo.html" data-open-zalo-modal>래쉬라인 인핸스먼트</a></li>
-                            <li><a href="/ko/services/khu-tham-moi-nam-nu.html">남녀 립 뉴트럴라이징</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="/ko/pricing.html">가격</a></li>
                     <li><a href="/ko/blogs.html">뷰티 지식</a></li>
                     <li><a href="/ko/gallery.html">갤러리</a></li>
                     <li><a href="/ko/feedback.html">고객 후기</a></li>
