--- a/components/header-vi.html
+++ b/components/header-vi.html
@@ -9,20 +9,7 @@
             </div>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item-dropdown">
-                        <a href="#services" class="nav-link-with-dropdown">
-                            <span>Dịch vụ</span>
-                            <img src="../icons/arrow-down.svg" alt="Dropdown" class="nav-dropdown-arrow"
-                                data-icon-path="arrow-down.svg">
-                        </a>
-                        <ul class="nav-dropdown-menu">
-                            <li><a href="/vi/services/phun-moi-collagen.html">Phun môi collagen</a></li>
-                            <li><a href="/vi/services/phun-may-shading.html">Phun mày shading</a></li>
-                            <li><a href="/vi/services/eyeliner-tattoo.html" data-open-zalo-modal>Phun mí mở tròng</a>
-                            </li>
-                            <li><a href="/vi/services/khu-tham-moi-nam-nu.html">Khử thâm môi cho nam nữ</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="/vi/pricing.html">Bảng giá</a></li>
                     <li><a href="/vi/blogs.html">Kiến thức</a></li>
                     <li><a href="/vi/gallery.html">Thư viện ảnh</a></li>
                     <li><a href="/vi/feedback.html">Feedback</a></li>
