--- a/styles.css
+++ b/styles.css
@@ -639,6 +639,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+    
 }
 
 /* Typography */
@@ -663,7 +664,7 @@ h2 {
     line-height: 1.3;
     text-align: center;
     margin-bottom: 20px;
-    margin-top: 50px;
+    margin-top: 0px;
     color: #232525;
     /* margin-bottom: 2.5rem; */
     letter-spacing: 0.01em;
@@ -1083,7 +1084,7 @@ p {
 
 /* Hero Section */
 .hero {
-    padding: 160px 0 80px;
+    padding: 160px 0 0px;
     background: white;
 }
 
@@ -1279,7 +1280,7 @@ p {
 
 @media (max-width: 1024px) {
     .hero {
-        padding: 140px 0 60px;
+        padding: 140px 0 0px;
     }
     
     .hero-content {
@@ -1567,6 +1568,7 @@ p {
 /* Services Section */
 .services {
     padding: 30px 0;
+    padding-top: 0px;
     background: white;
 }
 
@@ -1736,6 +1738,7 @@ p {
 @media (max-width: 768px) {
     .services {
         padding: 40px 0;
+        padding-top: 0px;
     }
 
     .service-card {
@@ -2049,6 +2052,7 @@ p {
 
 .gallery-page__header {
     padding: 32px 0 16px;
+    padding-top: 120px;
 }
 
 .gallery-back {
@@ -2191,6 +2195,7 @@ p {
 .blog {
     padding: 40px 0;
     background: white;
+    padding-top: 0px;
 }
 
 .blog .section-title {
